Fix overflow for small window

--- a/packages/ui/src/standalone.css
+++ b/packages/ui/src/standalone.css
@@ -72,6 +72,7 @@ body {
   width: fit-content;
   margin: 0.5rem;
   border-radius: 0.5rem;
+  white-space: nowrap;
 }
 
 .header .switch.switch-off:not(:hover, :focus) {
